--- a/force-app/main/default/lwc/itemActionCard/itemActionCard.html
+++ b/force-app/main/default/lwc/itemActionCard/itemActionCard.html
@@ -47,7 +47,7 @@
                 <lightning-layout-item padding="around-small">
                     <div class="header-column">
                         <lightning-icon icon-name="action:new_person_account" size="small" alternative-text="Avatar" title="Avatar Logo" ></lightning-icon>
-                        
+                        <lightning-formatted-text value={company} ></lightning-formatted-text>
                     </div>
                 </lightning-layout-item> 
             </lightning-layout>
