--- a/force-app/main/default/lwc/isvConsoleMap/isvConsoleMap.html
+++ b/force-app/main/default/lwc/isvConsoleMap/isvConsoleMap.html
@@ -5,10 +5,15 @@
         map-markers={mapMarkers}
         markers-title={markersTitle}
         onmarkerselect={handleMarkerSelect}
+        list-view="hidden"
         selected-marker-value={selectedMarkerValue} >
         </lightning-map>
 
-        <p slot="footer">Card Footer</p>
+        <p slot="footer">{numberOfMarkers}
+            <template if:true={selctedOnMobile}>
+                <c-badge label="View Recommendations"></c-badge>
+            </template>
+        </p>
     </lightning-card>
     
 </template>
