--- a/force-app/main/default/lwc/listContainer/listContainer.html
+++ b/force-app/main/default/lwc/listContainer/listContainer.html
@@ -1,11 +1,11 @@
 <template>
     <template if:true={hasLMAInstalls}>
         <lightning-card  variant="Narrow"  title={title} icon-name={headerIconName}>
-            <lightning-button-icon  icon-name="utility:down" variant="border-filled" alternative-text="Show More" slot="actions"></lightning-button-icon>
+            
             <ul class="slds-m-around_medium">
                 <template for:each={latestInstalls} for:item="install">
                     <li key={install.licenseID}>
-                        <c-item-action-card title={install.packageName} date={install.installDateTime} company={install.companyName} licenseid={install.licenseID} onclick={handleOptionClick}></c-item-action-card>
+                        <c-item-action-card class={computedChildClassName} parenttitle={title} title={install.packageName} date={install.installDateTime} company={install.companyName} licenseid={install.licenseID} onclick={handleOptionClick}></c-item-action-card>
                     </li>
                 </template>
             </ul>
