--- a/force-app/main/default/lwc/listContainer/listContainer.html
+++ b/force-app/main/default/lwc/listContainer/listContainer.html
@@ -5,7 +5,7 @@
             <ul class="slds-m-around_medium">
                 <template for:each={latestInstalls} for:item="install">
                     <li key={install.licenseID}>
-                        <c-item-action-card class={computedChildClassName} parenttitle={title} title={install.packageName} date={install.installDateTime} company={install.companyName} licenseid={install.licenseID} onclick={handleOptionClick}></c-item-action-card>
+                        <c-item-action-card class={computedChildClassName} packageversionid={install.packageVersion} parenttitle={title} title={install.packageName} installdate={install.installDateTime} expiredate={install.expirationDate} company={install.companyName} licenseid={install.licenseID} onclick={handleOptionClick} leadid={install.leadID} accountid={install.accountID}></c-item-action-card>
                     </li>
                 </template>
             </ul>
