--- a/force-app/main/default/lwc/itemActionCard/itemActionCard.html
+++ b/force-app/main/default/lwc/itemActionCard/itemActionCard.html
@@ -107,10 +107,10 @@
                                         <lightning-icon icon-name="utility:package" size={computedIconSize} alternative-text="PackageIcon" title="PackageIcon" ></lightning-icon> 
                                 </lightning-layout-item>
                                 <lightning-layout-item size="6">
-                                        <lightning-formatted-text value={title} ></lightning-formatted-text>
+                                        <lightning-button variant="base" label={title} value={packageversionid} title="Package Version" onclick={packageHandlelick} class="slds-m-left_x-small"></lightning-button>
                                 </lightning-layout-item>
                                 <lightning-layout-item flexibility="auto, no-grow" size="5">
-                                        <c-badge label="View Recommendations" recordid={licenseid} onselected={badgeSelected}></c-badge>
+                                        <c-badge label={topBadgeLabel} recordid={licenseid} onselected={badgeSelected}></c-badge>
                                 </lightning-layout-item>
                             </lightning-layout>
                         </li>
@@ -120,7 +120,7 @@
                                         <lightning-icon icon-name="utility:company" size={computedIconSize} alternative-text="CompanyIcon" title="CompanyIcon" ></lightning-icon> 
                                 </lightning-layout-item>
                                 <lightning-layout-item size="6">
-                                        <lightning-formatted-text value={company} ></lightning-formatted-text>
+                                        <lightning-button variant="base" label={company} value={companyId} title="Company ID" onclick={companyHandlelick} class="slds-m-left_x-small"></lightning-button>    
                                 </lightning-layout-item>
                                 <lightning-layout-item flexibility="auto, no-grow" size="5">
                                         <c-badge label="View Recommendations" recordid={licenseid} onselected={badgeSelected}></c-badge>
@@ -133,7 +133,7 @@
                                         <lightning-icon icon-name="utility:clock" size={computedIconSize} alternative-text="ClockIcon" title="ClockIcon" ></lightning-icon> 
                                 </lightning-layout-item>
                                 <lightning-layout-item size="6">
-                                    <lightning-formatted-date-time value={date} year={computedYearFormat} month={computedMonthFormat} day={computedDayFormat} weekday={computedWeekDayFormat} hour="2-digit" minute="2-digit"></lightning-formatted-date-time>
+                                    <lightning-formatted-date-time value={whichDate} year={computedYearFormat} month={computedMonthFormat} day={computedDayFormat} weekday={computedWeekDayFormat} hour="2-digit" minute="2-digit"></lightning-formatted-date-time>
                                 </lightning-layout-item>
                                 <lightning-layout-item flexibility="auto, no-grow" size="5">
                                         <c-badge label="View Recommendations" recordid={licenseid} onselected={badgeSelected}></c-badge>
