first committo labs

--- a/force-app/main/default/lwc/badge/badge.html
+++ b/force-app/main/default/lwc/badge/badge.html
@@ -1,8 +1,8 @@
 <!--
-  Copyright (c) 2019, salesforce.com, inc.
+  Copyright (c) 2018, salesforce.com, inc.
   All rights reserved.
-  SPDX-License-Identifier: MIT
-  For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/MIT
+  SPDX-License-Identifier: BSD-3-Clause
+  For full license text, see LICENSE.txt file in the repo root or https://opensource.org/licenses/BSD-3-Clause
  -->
 
 <template >
@@ -11,7 +11,7 @@
         <lightning-layout vertical-align="start" horizontal-align="space">
           <!-- Left Column - Badge Icon - Start-->
           <lightning-layout-item size="2">
-            <div>
+            <div class={iconCSSClass}>
                 <lightning-icon icon-name={badgeIconName} size="xx-small" alternative-text="BadgeIcon" title="BadgeIcon" alignment-bump="left" ></lightning-icon> 
             </div>
         </lightning-layout-item>
