--- a/force-app/main/default/lwc/itemActionCard/itemActionCard.html
+++ b/force-app/main/default/lwc/itemActionCard/itemActionCard.html
@@ -1,10 +1,8 @@
-<!-- OSS Version of Lightning Card -->
-
 <!--
-  Copyright (c) 2019, salesforce.com, inc.
+  Copyright (c) 2018, salesforce.com, inc.
   All rights reserved.
-  SPDX-License-Identifier: MIT
-  For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/MIT
+  SPDX-License-Identifier: BSD-3-Clause
+  For full license text, see LICENSE.txt file in the repo root or https://opensource.org/licenses/BSD-3-Clause
  -->
 
 <template>
@@ -38,7 +36,7 @@
                                         <lightning-button variant="base" label={title} value={packageversionid} title={fullTitle} onclick={packageHandlelick}></lightning-button>
                                 </lightning-layout-item>
                                 <lightning-layout-item flexibility="auto, no-grow" size="5">
-                                        <c-badge label={topBadgeLabel} recordid={licenseid}></c-badge>
+                                        <c-badge label={topBadgeLabel} recordid={licenseid} launchedviamodal={launchedviamodal}></c-badge>
                                 </lightning-layout-item>
                             </lightning-layout>
                         </li>
@@ -53,7 +51,7 @@
                                         <lightning-button variant="base" label={company} value={companyId} title={fullCompany} onclick={companyHandlelick}></lightning-button>    
                                 </lightning-layout-item>
                                 <lightning-layout-item flexibility="auto, no-grow" size="5">
-                                        <c-badge label={midleBadgeLabel} recordid={companyId}></c-badge>
+                                        <c-badge label={midleBadgeLabel} recordid={companyId} launchedviamodal={launchedviamodal}></c-badge>
                                 </lightning-layout-item>
                             </lightning-layout>
                         </li>
@@ -70,7 +68,7 @@
                                     </div>
                                 </lightning-layout-item>
                                 <lightning-layout-item flexibility="auto, no-grow" size="5">
-                                    <c-badge label={lowerBadgeLabel} recordid={companyId} email={email}></c-badge>
+                                    <c-badge label={lowerBadgeLabel} recordid={companyId} email={email} launchedviamodal={launchedviamodal}></c-badge>
                                 </lightning-layout-item>
                             </lightning-layout>
                         </li>
