--- a/force-app/main/default/lwc/modifyLicenseExpiration/modifyLicenseExpiration.html
+++ b/force-app/main/default/lwc/modifyLicenseExpiration/modifyLicenseExpiration.html
@@ -1,3 +1,10 @@
+<!--
+  Copyright (c) 2018, salesforce.com, inc.
+  All rights reserved.
+  SPDX-License-Identifier: BSD-3-Clause
+  For full license text, see LICENSE.txt file in the repo root or https://opensource.org/licenses/BSD-3-Clause
+ -->
+
 <template>
     <lightning-record-edit-form record-id={recordid}
                                 object-api-name="sfLma__License__c">
