--- a/force-app/main/default/lwc/itemActionCard/itemActionCard.html
+++ b/force-app/main/default/lwc/itemActionCard/itemActionCard.html
@@ -103,25 +103,9 @@
                 <!-- Left Column - Row Icon - End-->
 
                 <!-- Right Column - Badge Buttons - Start-->
+                <template if:true={iscustomersimpacted}>
                 <lightning-layout-item padding="horizontal-small" size="11">
                     <ul class="rowText">
-                        <li>
-                            <lightning-layout vertical-align="stretch" multiple-rows=true>
-                                <div class="iconsdiv">
-                                    <lightning-layout-item size="1">
-                                        <lightning-icon icon-name="utility:package" size={computedIconSize} alternative-text="PackageIcon" title="PackageIcon" ></lightning-icon> 
-                                    </lightning-layout-item>
-                                </div>
-                                <lightning-layout-item padding="horizontal-small" size="6">
-                                    <div class={computedPckgButtonPadding}>
-                                        <a onclick={packageHandlelick}>{title}</a>   
-                                    </div>
-                                </lightning-layout-item>
-                                <lightning-layout-item flexibility="auto, no-grow" size="5">
-                                    <c-badge class={computedChildClassName} label={topBadgeLabel} recordid={licenseid} launchedviamodal={launchedviamodal}></c-badge>
-                                </lightning-layout-item>
-                            </lightning-layout>
-                        </li>
                         <li>
                             <lightning-layout vertical-align="stretch" multiple-rows=true>
                                 <div class="iconsdiv">
@@ -135,7 +119,7 @@
                                     </div>
                                 </lightning-layout-item>
                                 <lightning-layout-item flexibility="auto, no-grow" size="5">
-                                    <c-badge class={computedChildClassName} label={midleBadgeLabel} recordid={companyId} launchedviamodal={launchedviamodal}></c-badge>
+                                    <c-badge class={computedChildClassName} label={topBadgeLabel} recordid={companyId} launchedviamodal={launchedviamodal}></c-badge>
                                 </lightning-layout-item>
                             </lightning-layout>
                         </li>
@@ -143,21 +127,80 @@
                             <lightning-layout vertical-align="stretch" multiple-rows=true>
                                 <div class="iconsdiv">
                                     <lightning-layout-item size="1">
-                                        <lightning-icon icon-name="utility:clock" size={computedIconSize} alternative-text="ClockIcon" title="ClockIcon" ></lightning-icon> 
+                                        <lightning-icon icon-name="utility:package" size={computedIconSize} alternative-text="PackageIcon" title="PackageIcon" ></lightning-icon> 
                                     </lightning-layout-item>
                                 </div>
                                 <lightning-layout-item padding="horizontal-small" size="6">
-                                    <div class={computedDateButtonPadding}> 
-                                        <lightning-formatted-date-time value={whichDate} year={computedYearFormat} month={computedMonthFormat} day={computedDayFormat} weekday={computedWeekDayFormat} hour="2-digit" minute="2-digit"></lightning-formatted-date-time>   
+                                    <div class={computedPckgButtonPadding}>
+                                        <a onclick={packageHandlelick}>{title}</a>   
                                     </div>
                                 </lightning-layout-item>
                                 <lightning-layout-item flexibility="auto, no-grow" size="5">
-                                        <c-badge class={computedChildClassName} label={lowerBadgeLabel} recordid={companyId} email={email} launchedviamodal={launchedviamodal}></c-badge>
+                                    <c-badge class={computedChildClassName} label={midleBadgeLabel} recordid={companyId} launchedviamodal={launchedviamodal}></c-badge>
                                 </lightning-layout-item>
                             </lightning-layout>
                         </li>
                     </ul>
-                </lightning-layout-item>                
+                </lightning-layout-item>
+                </template>
+                
+                <template if:false={iscustomersimpacted}>
+                    <lightning-layout-item padding="horizontal-small" size="11">
+                        <ul class="rowText">
+                            <li>
+                                <lightning-layout vertical-align="stretch" multiple-rows=true>
+                                    <div class="iconsdiv">
+                                        <lightning-layout-item size="1">
+                                            <lightning-icon icon-name="utility:package" size={computedIconSize} alternative-text="PackageIcon" title="PackageIcon" ></lightning-icon> 
+                                        </lightning-layout-item>
+                                    </div>
+                                    <lightning-layout-item padding="horizontal-small" size="6">
+                                        <div class={computedPckgButtonPadding}>
+                                            <a onclick={packageHandlelick}>{title}</a>   
+                                        </div>
+                                    </lightning-layout-item>
+                                    <lightning-layout-item flexibility="auto, no-grow" size="5">
+                                        <c-badge class={computedChildClassName} label={topBadgeLabel} recordid={licenseid} launchedviamodal={launchedviamodal}></c-badge>
+                                    </lightning-layout-item>
+                                </lightning-layout>
+                            </li>
+                            <li>
+                                <lightning-layout vertical-align="stretch" multiple-rows=true>
+                                    <div class="iconsdiv">
+                                        <lightning-layout-item size="1">
+                                            <lightning-icon icon-name="utility:company" size={computedIconSize} alternative-text="CompanyIcon" title="CompanyIcon" ></lightning-icon> 
+                                        </lightning-layout-item>
+                                    </div>
+                                    <lightning-layout-item padding="horizontal-small" size="6">
+                                        <div class={computedAcctButtonPadding}>
+                                            <a onclick={companyHandlelick}>{company}</a> 
+                                        </div>
+                                    </lightning-layout-item>
+                                    <lightning-layout-item flexibility="auto, no-grow" size="5">
+                                        <c-badge class={computedChildClassName} label={midleBadgeLabel} recordid={companyId} launchedviamodal={launchedviamodal}></c-badge>
+                                    </lightning-layout-item>
+                                </lightning-layout>
+                            </li>
+                            <li>
+                                <lightning-layout vertical-align="stretch" multiple-rows=true>
+                                    <div class="iconsdiv">
+                                        <lightning-layout-item size="1">
+                                            <lightning-icon icon-name="utility:clock" size={computedIconSize} alternative-text="ClockIcon" title="ClockIcon" ></lightning-icon> 
+                                        </lightning-layout-item>
+                                    </div>
+                                    <lightning-layout-item padding="horizontal-small" size="6">
+                                        <div class={computedDateButtonPadding}> 
+                                            <lightning-formatted-date-time value={whichDate} year={computedYearFormat} month={computedMonthFormat} day={computedDayFormat} weekday={computedWeekDayFormat} hour="2-digit" minute="2-digit"></lightning-formatted-date-time>   
+                                        </div>
+                                    </lightning-layout-item>
+                                    <lightning-layout-item flexibility="auto, no-grow" size="5">
+                                            <c-badge class={computedChildClassName} label={lowerBadgeLabel} recordid={companyId} email={email} launchedviamodal={launchedviamodal}></c-badge>
+                                    </lightning-layout-item>
+                                </lightning-layout>
+                            </li>
+                        </ul>
+                    </lightning-layout-item>
+                    </template>
                 <!-- Right Column - Badge Buttons - End-->
             </lightning-layout>
 
