--- a/force-app/main/default/lwc/badge/badge.html
+++ b/force-app/main/default/lwc/badge/badge.html
@@ -13,7 +13,7 @@
                 <div class="badgeicon">
                         <lightning-layout-item size="2">
                         <div >
-                                <lightning-icon icon-name={badgeIconName} size="xx-small" alternative-text="BadgeIcon" title="BadgeIcon" alignment-bump="left" ></lightning-icon> 
+                                <lightning-icon icon-name={badgeiconname} size="xx-small" alternative-text="BadgeIcon" title="BadgeIcon" alignment-bump="left" ></lightning-icon> 
                         </div>
                         </lightning-layout-item>
                 </div>
