--- a/force-app/main/default/lwc/listContainer/listContainer.html
+++ b/force-app/main/default/lwc/listContainer/listContainer.html
@@ -13,12 +13,41 @@
                 <lightning-spinner alternative-text="Loading" size="small"></lightning-spinner>
             </template>
             <template if:true={hasSubHeader}>
-                <lightning-formatted-date-time value={startdt} year={yearFormat} month={monthFormat} day={dayFormat} weekday={weekDayFormat} time-zone="GMT"></lightning-formatted-date-time> - {starttime} - {endtime} - GMT 
+                <div class="slds-p-left_large">
+                    <lightning-layout vertical-align="stretch" multiple-rows=true>
+                        <lightning-layout-item size="6">
+                            <lightning-layout>
+                                    <lightning-layout-item size="1">
+                                        <lightning-icon icon-name="utility:event" size="xx-small" alternative-text="CompanyIcon" title="CompanyIcon" ></lightning-icon> 
+                                    </lightning-layout-item>
+                                <lightning-layout-item size="11">
+                                    <lightning-formatted-date-time value={startdt} year="numeric" month="numeric" day="numeric" hour="2-digit"
+                                            minute="2-digit" time-zone="UTC" hour12="true"></lightning-formatted-date-time>
+                                            <lightning-formatted-text value=" - " ></lightning-formatted-text>  
+                                    <lightning-formatted-date-time value={endtime} hour="2-digit" minute="2-digit" time-zone="UTC" time-zone-name="short"
+                                    ></lightning-formatted-date-time>
+                                </lightning-layout-item>
+                            </lightning-layout>
+                            
+                                    
+                        </lightning-layout-item>
+                        <lightning-layout-item size="6">
+                            <lightning-layout vertical-align="stretch">
+                                    <lightning-layout-item size="1">
+                                        <lightning-icon icon-name={computedAvailabilityIcon} size={computedIconSize} alternative-text="AvilabilityIcon" title="AvilabilityIcon" ></lightning-icon> 
+                                    </lightning-layout-item>
+                                <lightning-layout-item padding="horizontal-small" size="11">
+                                    {availabilityText}
+                                </lightning-layout-item>
+                            </lightning-layout>
+                    </lightning-layout-item>        
+                    </lightning-layout>
+                </div>  
             </template>
             <ul class={ulCssClass}>
                 <template for:each={latestInstalls} for:item="install">
                     <li key={install.licenseID}>
-                        <c-item-action-card class={computedChildClassName} packageversionid={install.packageVersion} parenttitle={title} title={install.packageName} installdate={install.installDateTime} expiredate={install.expirationDate} company={install.companyName} licenseid={install.licenseID} onclick={handleOptionClick} leadid={install.leadID} accountid={install.accountID} email={install.email} launchedviamodal={launchedViaModal} iscustomersimpacted={isCustomersImpacted}></c-item-action-card>
+                        <c-item-action-card class={computedChildClassName} packageversionid={install.packageVersion} parenttitle={title} title={install.packageName} installdate={install.installDateTime} expiredate={install.expirationDate} company={install.companyName} licenseid={install.licenseID} onclick={handleOptionClick} leadid={install.leadID} accountid={install.accountID} email={install.email} launchedviamodal={launchedViaModal} iscustomersimpacted={isCustomersImpacted} orgid={install.orgID} maintenancename={title} startdt={startdt} endtime={endtime} availability={availabilityText} licenseids={licenseIds}></c-item-action-card>
                     </li>
                 </template>
             </ul>
