--- a/force-app/main/default/lwc/maintenanceEvents/maintenanceEvents.html
+++ b/force-app/main/default/lwc/maintenanceEvents/maintenanceEvents.html
@@ -9,7 +9,7 @@
                 <ul class={ulCssClass}>
                     <template for:each={eventsData} for:item="event">
                         <li key={event.eventName}>
-                            <c-event-summary-card class={computedChildClassName}  title={event.eventName} id={event.maintenanceId} startdt={event.startDateTime} enddt={event.endDateTime} numimpacted={event.numImpactedCustomers} impactedlicenseids={event.impactedLicenseIds} starttime={event.strStartTime} endtime={event.strEndTime} instancename={event.instanceName} availability={event.availability} ></c-event-summary-card>
+                            <c-event-summary-card class={computedChildClassName}  title={event.Event_Name__c} id={event.Maintenance_External_Id__c} startdt={event.Start_Date_Time__c} enddt={event.End_Date_Time__c} numimpacted={event.Number_of_Impacted_Customers__c} impactedlicenseids={event.ImpactedLicenseIds__c} starttime={event.Start_Date_Time__c} endtime={event.End_Date_Time__c} instancename={event.Instance_Name__c} availability={event.Availability__c} maintenanceid={event.id}></c-event-summary-card>
                         </li>
                     </template>
                 </ul>
@@ -23,7 +23,7 @@
                         </template>
                     </lightning-layout-item>
                     <lightning-layout-item padding="around-small">
-                        {leftIndexLabel} - {rightIndex} of {numrecords}
+                        <!--{leftIndexLabel} - {rightIndex} of {numrecords}-->
                     </lightning-layout-item>
                     <lightning-layout-item padding="around-small">
                         <template if:true={hasNextRecords}>
