Added Deadline Date to component UI

--- a/force-app/main/default/lwc/countdownTimer/countdownTimer.html
+++ b/force-app/main/default/lwc/countdownTimer/countdownTimer.html
@@ -44,6 +44,7 @@
 =======
     <template if:true={timeRemainingAsString}>
         <lightning-card title={title} icon-name="utility:clock">
+            <div style="font-size: 20px;text-align:center;">Org Expires on: {deadlineStr}</div>
             <div style="font-size: 20px;text-align:center;">{timeRemainingAsString}</div>
         
             <div slot="footer">
