--- a/force-app/main/default/lwc/countdownTimer/countdownTimer.html
+++ b/force-app/main/default/lwc/countdownTimer/countdownTimer.html
@@ -44,12 +44,20 @@
 =======
     <template if:true={timeRemainingAsString}>
         <lightning-card title={title} icon-name="utility:clock">
-            <div style="font-size: 20px;text-align:center;">Org Expires on: {deadlineStr}</div>
-            <div style="font-size: 20px;text-align:center;">{timeRemainingAsString}</div>
-        
+            <div class="txt">Org Expires on: {deadline}</div>
+            <div class="txt-small">{timeRemainingAsString}</div>
+
+            <template if:true={expanded}>
+                <c-notification-config days-before-expiry={daysBeforeExpiry}></c-notification-config>
+            </template>
+
+            <div class="slds-align_absolute-center slds-m-top_small">
+                <lightning-button variant="brand" label={buttonLabel} title={buttonLabel} onclick={invertExpanded} ></lightning-button>
+            </div>
+
             <div slot="footer">
                 <p><lightning-formatted-url value="www.salesforce.com" label="Following a formalised partner contract with Salesforce, raise this case to activate your org." target="_blank"></lightning-formatted-url></p>
-                <p><lightning-formatted-url value="https://partners.salesforce.com/newPartnerCase?subtopic=TrialExtension" label="Need more time? Use this link to automatically extend your org expiration." target="_blank"></lightning-formatted-url></p>
+                <p class="slds-m-top_xx-small"><lightning-formatted-url value="https://partners.salesforce.com/newPartnerCase?subtopic=TrialExtension" label="Need more time? Use this link to automatically extend your org expiration." target="_blank"></lightning-formatted-url></p>
             </div>
         </lightning-card>
     </template>
