--- a/force-app/main/default/lwc/eventSummaryCard/eventSummaryCard.html
+++ b/force-app/main/default/lwc/eventSummaryCard/eventSummaryCard.html
@@ -37,9 +37,9 @@
                         <lightning-layout-item padding="horizontal-small" size="11">
                             <div class={computedAcctButtonPadding}>
                                 <lightning-formatted-date-time value={startdt} year="numeric" month="numeric" day="numeric" hour="2-digit"
-                                        minute="2-digit" time-zone="UTC" hour12="true"></lightning-formatted-date-time>
+                                        minute="2-digit" hour12="true"></lightning-formatted-date-time>
                                         <lightning-formatted-text value=" - " ></lightning-formatted-text>  
-                                <lightning-formatted-date-time value={endtime} hour="2-digit" minute="2-digit" time-zone="UTC" time-zone-name="short"
+                                <lightning-formatted-date-time value={endtime} hour="2-digit" minute="2-digit" time-zone-name="short"
                                 ></lightning-formatted-date-time>
                             </div>
                         </lightning-layout-item>
